[package]
name = "repoutil"
version = "0.28.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/chrisdavison/repoutil"
description = "Wrapper around my common git commands"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "3.1.0"
anyhow = "1.0"
structopt = "0.3.26"
rayon = "1.8.1"
