[package]
name = "repoutil"
version = "0.37.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/chrisdavison/repoutil"
description = "Wrapper around my common git commands"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.27", features = ["derive"] }
rayon = "1.10.0"
