[package]
name = "repoutil"
version = "0.48.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/chrisdavison/repoutil"
description = "Wrapper around my common git commands"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.27", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anstream = "0.6"
anstyle = "1.0"
clap_complete = "4.5.27"

[build-dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.27"

[features]
default = ["jj", "git"]
jj = []
git = []
